fix: main menu not showing for small to medium screens

--- a/wp-content/themes/gafas-theme/src/scss/modules/_header.scss
+++ b/wp-content/themes/gafas-theme/src/scss/modules/_header.scss
@@ -89,6 +89,9 @@
             cursor: pointer;
             .logo {
                 width: 200px;
+                @include respond-to-mob('s-desk') {
+                    width: 150px;
+                }
                 @include respond-to-mob('medium') {
                     width: 125px;
                 }
@@ -106,13 +109,13 @@
                 &__list {
                     @include flex-display(row, flex-start, center);
                     gap: 30px;
-                    @include respond-to-mob('s-desk') {
+                    @include respond-to-mob('large') {
                         @include flex-display(column, flex-start, flex-start);
                         gap: 15px;
                         height: 100%;
                     }
                     li {
-                        @include respond-to-mob('s-desk') {
+                        @include respond-to-mob('large') {
                             width: 100%;
                             @include flex-display(row, space-between, center);
                         }
@@ -146,7 +149,7 @@
                         &.dropdown {
                             & > .dropdown-toggler {
                                 display: none;
-                                @include respond-to-mob('s-desk') {
+                                @include respond-to-mob('large') {
                                     display: inline-flex;
                                     justify-content: center;
                                     align-items: center;
@@ -162,7 +165,7 @@
                                     vertical-align: unset;
                                     margin-left: 2px;
                                     @include transition(0.2s);
-                                    @include respond-to-mob('s-desk') {
+                                    @include respond-to-mob('large') {
                                         display: none;
                                     }
                                 }
@@ -173,7 +176,7 @@
                                     & ~ .dropdown-menu {
                                         &.show {
                                             @include flex-display(column, flex-start, flex-start);
-                                            @include respond-to-mob('s-desk') {
+                                            @include respond-to-mob('large') {
                                                 max-height: 100%;
                                             }
                                         }
@@ -183,7 +186,7 @@
                                     gap: 10px;
                                     border-radius: 0;
                                     padding: 20px 0;
-                                    @include respond-to-mob('s-desk') {
+                                    @include respond-to-mob('large') {
                                         @include flex-display(column, flex-start, flex-start);
                                         position: relative;
                                         flex: none;
@@ -210,7 +213,7 @@
                     }
                 }
             }
-            @include respond-to-mob('s-desk') {
+            @include respond-to-mob('large') {
                 position: fixed;
                 top: 70px;
                 right: 0;
